# OnlineCourses

./: CMakeLists.txt  README.md  README.txt  main.cpp
daigrams/: ClassDiagram.drawio  FeatureLisist.ods  Usecase_online_course.drawio
database/: database.cpp  database.h  filestorage.cpp  filestorage.h  idatabaseclient.cpp  idatabaseclient.h  olcdatabaseclient.cpp  olcdatabaseclient.h  olcdatabaseimpl.h
database/test/: olcdbclienttest.cpp  test.cpp
docs/: FeatureLisist.ods
include/: Readme.txt  olcdatabasemgr.h  olcinteractionmgr.h  olclistmgr.h  olcsubscriptionmgr.h  olctypes.h
logger/include/: ilogger.h  loggerfile.h  loggertypes.h  logwrapper.h  timeutility.h
logger/src/: loggerfile.cpp  logwrapper.cpp
src/: olcdatabasemgr.cpp  olcinteractionmgr.cpp  olclistmgr.cpp  olcsubscriptionmgr.cpp
templates/: iolc.h  olccourse.h  olcuser.h  olcvendor.h
templates/test/: test.cpp
utils/: idgenerator.cpp  idgenerator.h
